feat: Implementing Role features
